--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">auratekh</h1>
-        <p class="lead">trance, prog, rapture</p>
         <ul class="list-unstyled">
           <li><a class="link" href="http://www.soundcloud.com/auratekh">soundcloud</a></li>
+          <li><a class="link" href="https://soundcloud.com/sonic-rites/sets/sonic-rites-mixes-1">sonic rites mixes</a></li>
           <li><a class="link" href="http://www.auratekh.bandcamp.com">bandcamp</a></li>
         </ul>
       </div>
