--- a/sonicrites.html
+++ b/sonicrites.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>auratekh</title>
+  <title>sonic rites</title>
 
   <!-- Bootstrap core CSS -->
   <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -51,12 +51,36 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1 class="mt-5">auratekh</h1>
-        <ul class="list-unstyled">
-          <li><a class="link" href="http://www.soundcloud.com/auratekh">soundcloud</a></li>
-          <li><a class="link" href="https://soundcloud.com/sonic-rites/sets/sonic-rites-mixes-1">sonic rites mixes</a></li>
-          <li><a class="link" href="http://www.auratekh.bandcamp.com">bandcamp</a></li>
-        </ul>
+        <h1 class="mt-5">sonic rites</h1>
+        <p> test text </p>
+        <br>
+        <br>
+        <!-- Begin Mailchimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="https://gmail.us6.list-manage.com/subscribe/post?u=6a661d4ba2a4f1a6b570a999f&amp;id=c22537248d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2></h2>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div hidden="true"><input type="hidden" name="tags" value="3193021"></div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6a661d4ba2a4f1a6b570a999f_c22537248d" tabindex="-1" value=""></div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </div>
+        </div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
       </div>
     </div>
   </div>
