--- a/sonicrites.html
+++ b/sonicrites.html
@@ -51,6 +51,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
+	<img src="webwhite.png" alt="sonic rites" width="500" height="500"> 
+	<br>
+	<br>
         <h1 class="mt-5">sonic rites</h1>
         <p> test text </p>
         <br>
