--- a/sonicrites.html
+++ b/sonicrites.html
@@ -54,10 +54,10 @@
 	<img src="webwhite.png" alt="sonic rites" width="500" height="500"> 
 	<br>
 	<br>
-        <h1 class="mt-5">sonic rites</h1>
+<!--         <h1 class="mt-5">sonic rites</h1>
         <p> test text </p>
         <br>
-        <br>
+        <br> -->
         <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
 <form action="https://gmail.us6.list-manage.com/subscribe/post?u=6a661d4ba2a4f1a6b570a999f&amp;id=c22537248d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
