--- a/sonicrites.html
+++ b/sonicrites.html
@@ -76,7 +76,7 @@
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6a661d4ba2a4f1a6b570a999f_c22537248d" tabindex="-1" value=""></div>
         <div class="optionalParent">
             <div class="clear foot">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                <centre><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></centre>
             </div>
         </div>
     </div>
