--- a/sonicrites.html
+++ b/sonicrites.html
@@ -53,7 +53,6 @@
       <div class="col-lg-12 text-center">
 	<img src="webwhite.png" alt="sonic rites" width="500" height="500"> 
 	<br>
-	<br>
 <!--         <h1 class="mt-5">sonic rites</h1>
         <p> test text </p>
         <br>
@@ -66,6 +65,7 @@
 <div class="mc-field-group">
 	<label for="mce-EMAIL"> email 
 </label>
+	<br>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
 <div hidden="true"><input type="hidden" name="tags" value="3193021"></div>
@@ -76,7 +76,7 @@
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6a661d4ba2a4f1a6b570a999f_c22537248d" tabindex="-1" value=""></div>
         <div class="optionalParent">
             <div class="clear foot">
-                <centre><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></centre>
+                <centre><input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></centre>
             </div>
         </div>
     </div>
