--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         </ul>
       </div>
     </div>
+    <br>
+    <iframe src="https://ra.co/widget/eventlisting?dj=auratekh&hideimage=true&bgcolor=ffffff&linkcolor=6b96c2&textcolor=000000" height="640" width="100%" frameborder="0" />
   </div>
 
   <!-- Bootstrap core JavaScript -->
