--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
         </ul>
       </div>
     </div>
-    <br>
-    <iframe src="https://ra.co/widget/eventlisting?dj=auratekh&hideimage=true&bgcolor=ffffff&linkcolor=6b96c2&textcolor=000000" height="640" width="100%" frameborder="0" />
-  </div>
+        <div class="row">
+      <div class="col-lg-12 text-center">
+        <iframe src="https://ra.co/widget/eventlisting?dj=auratekh&hideimage=true&bgcolor=ffffff&linkcolor=6b96c2&textcolor=000000" height="640" width="100%" frameborder="0" />
+        </div>
+    </div>
+   </div>
 
   <!-- Bootstrap core JavaScript -->
   <!-- <script src="vendor/jquery/jquery.slim.min.js"></script>
