--- a/index.html
+++ b/index.html
@@ -56,13 +56,9 @@
           <li><a class="link" href="http://www.soundcloud.com/auratekh">soundcloud</a></li>
           <li><a class="link" href="https://soundcloud.com/sonic-rites/sets/sonic-rites-mixes-1">sonic rites mixes</a></li>
           <li><a class="link" href="http://www.auratekh.bandcamp.com">bandcamp</a></li>
+          <li><iframe src="https://ra.co/widget/eventlisting?dj=auratekh&hideimage=true&bgcolor=ffffff&linkcolor=6b96c2&textcolor=000000" height="640" width="100%" frameborder="0" /></li>
         </ul>
       </div>
-    </div>
-        <div class="row">
-      <div class="col-lg-12 text-center">
-        <iframe src="https://ra.co/widget/eventlisting?dj=auratekh&hideimage=true&bgcolor=ffffff&linkcolor=6b96c2&textcolor=000000" height="640" width="100%" frameborder="0" />
-        </div>
     </div>
    </div>
 
