--- a/links.html
+++ b/links.html
@@ -52,11 +52,20 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">soundsystem links</h1>
-        <h3> class="mt-5">resources</h3>
+        <h3 class="mt-5">resources</h3>
         <ul class="list-unstyled">
           <li><a class="link" href="www.speakerplans.com">speakerplans.com - forum and free plans</a></li>
           <li><a class="link" href="www.freespeakerplans.com">free speaker plans</a></li>
           <li><a class="link" href="https://www.prosoundweb.com/study-hall/">prosoundweb - lots of educational resources</a></li>
+<!--           <li><a class="link" href="http://auratekh.net/sonicrites">sonic rites tranceparty</a></li> -->
+
+        </ul>
+      </div>
+              <h3 class="mt-5">buy 'n sell</h3>
+        <ul class="list-unstyled">
+          <li><a class="link" href="https://www.facebook.com/groups/114005842011614">rig re-sale (fb)</a></li>
+          <li><a class="link" href="www.freespeakerplans.com">free speaker plans</a></li>
+          <li><a class="link" href="https://www.gumtree.com/">gumtree (kind of dead these days but worth a look)</a></li>
 <!--           <li><a class="link" href="http://auratekh.net/sonicrites">sonic rites tranceparty</a></li> -->
 
         </ul>
